data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3327.wast
;; 6. **Test Description**:     - **Setup**: Design a function `alpha` that performs an overflow operation leading to an indirect function call ending in `unreachable`.    - **Constraint**: Check for integer overflow causing unreachable code execution.    - **Reasoning**: Identifies differential handling of arithmetic overflow leading to unreachable.

(assert_invalid
  (module
    (type (func (result i32)))
    (func $alpha (result i32)
      i32.const 2147483647
      i32.const 1
      i32.add
      call_indirect (type 0) (i32.const 0)
      unreachable
    )
  )
  "integer overflow leading to unreachable"
)